--- a/index.html
+++ b/index.html
@@ -234,9 +234,9 @@
       <div id="view-project">
         <h3><a href="https://klyn-s.github.io/project-page/">( View More Project Details →)</a></h3>
         <div class="images">
-          <img src="https://via.placeholder.com/254x329" alt="sodoi magazine cover">
-          <img src="https://via.placeholder.com/254x169" alt="street photograph of a lady sitting on a bench">
-          <img src="https://via.placeholder.com/254x254" alt="close up photo of dngle earing">
+          <img src="single page3.png" alt="sodoi magazine cover" style="width: 254px">
+          <img src="lady on the bench.heic" alt="street photograph of a lady sitting on a bench" style="width: 254px">
+          <img src="earing.jpg" alt="close up photo of dngle earing" style="width: 254px">
         </div>
       </div>
     </div>
