--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
 
       #about-me {
         background-color: #fefefe;
-        margin: 50px;
+        margin: 50px 50px;
       }
       
       #about-me h4 {
