--- a/index.html
+++ b/index.html
@@ -77,7 +77,6 @@
       }
 
       .nav .logo a:hover {
-        font-weight: bold;
         color: #8E418E;
       }
 
@@ -128,8 +127,10 @@
       }
 
       #about-me .details {
-        width: 35%;
-        margin: 50px;
+        position: relative;
+        top: 40%;
+        width: 31%;
+        margin: 80px;     
       }
 
       /* View More Work */
@@ -165,36 +166,6 @@
         top: 20%;
         margin-right: 80px;
       }
-
-      .commission-prices {
-        font-family: 'Open Sans', sans-serif;
-        width: 80%;
-        border-collapse: collapse;
-        margin: 120px;
-      }
-
-      .commission-prices h4 {
-        position: relative;
-        float: right;
-        text-align: center;
-      }
-      
-      .commission-prices thead {
-        background-color: #d8bfd8;
-      }
-
-      .commission-prices th,
-      .commission-prices td {
-        border: 1px solid #282828;
-        padding: 10px;
-        text-align: left;
-      }
-
-      .commission-prices th {
-        font-size: 18px;
-        font-weight: bold;
-      }
-
 
       /* Footer */
       .footer {
@@ -244,51 +215,14 @@
       <div id="view-project">
         <h3><a href="https://klyn-s.github.io/project-page/">( View More Work →)</a></h3>
         <div class="images">
+
           <img src="single page3.png" alt="sodoi magazine cover" style="width: 254px">
-          <img src="lady on the bench.heic" alt="street photograph of a lady sitting on a bench" style="width: 254px">
-          <img src="earing2.jpg" alt="close up photo of dngle earing" style="width: 254px">
+          <img src="IMG_7732.JPG" alt="street photograph of a lady sitting on a bench" style="width: 254px">
+          <img src="earings.jpg" alt="close up photo of dangle earing" style="width: 254px">
         </div>
       </div>
 
-      <table class="commission-prices">
-        <h4>Commissions</h4>
-        <thead>
-          <tr>
-            <th>Service</th>
-            <th>Description</th>
-            <th>Price (CAD)</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr>
-            <td>Zine Design</td>
-            <td>Custom layout and design for a 12-page zine</td>
-            <td>$150</td>
-          </tr>
-          <tr>
-            <td>Zine Expansion</td>
-            <td>Additional pages (per 4-page increment)</td>
-            <td>$30</td>
-          </tr>
-          <tr>
-            <td>Photography - Portrait</td>
-            <td>1-hour portrait session with 10 edited photos</td>
-            <td>$200</td>
-          </tr>
-          <tr>
-            <td>Photography - Event</td>
-            <td>2-hour event coverage with 20 edited photos</td>
-            <td>$400</td>
-          </tr>
-          <tr>
-            <td>Photography - Additional Photos</td>
-            <td>Extra edited photos (per photo)</td>
-            <td>$20</td>
-          </tr>
-        </tbody>
-      </table>
-
-
+      
 
       <div class="footer">
         <p>@kaitlyn’s portfolio</p>
