just make sure I saved my work TT

--- a/index.html
+++ b/index.html
@@ -111,6 +111,9 @@
         color: #8E418E;
       }
 
+      .nav ul a:active {
+        color: blue;
+      }
 
 
       #about-me {
@@ -127,7 +130,7 @@
         position: relative;
         top: 40%;
         width: 31%;
-        margin: 80px;     
+        margin: 80px;
       }
 
       /* View More Work */
@@ -219,7 +222,7 @@
         </div>
       </div>
 
-      
+
 
       <div class="footer">
         <p>@kaitlyn’s portfolio</p>
