--- a/index.html
+++ b/index.html
@@ -112,7 +112,8 @@
       }
 
       .nav ul a:active {
-        color: blue;
+        color: #8E418E;
+        text-decoration: underline;
       }
 
 
