--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
         <h3><a href="https://klyn-s.github.io/project-page/">( View More Work →)</a></h3>
         <div class="images">
           <img src="earings.jpg" alt="close up photo of dangle earing" style="width: 254px">
-          <img src="lady on a bench.JPG" alt="street photograph of a lady sitting on a bench" style="width: 254px">
+          <img src="sea background.png" alt="film photograph of a sea view with pinkish sky" style="width: 254px">
           <img src="single page3.png" alt="sodoi magazine cover" style="width: 254px">
           <img src="pg3.png" alt="magazine spread" style="width: 254px">
         </div>
