--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
           <h4>it’s a pleasure to meet you!</h4>
           <h3>I’m Kaitlyn,</h3>
           <p>a design student in global business and digital art program at university of Waterloo. I have a passion for <strong>photography</strong> and <strong>publication design</strong>.</p>
-          <h4><strong><a href="https://www.instagram.com/knatchaya_/profilecard/?igsh=MTNtMm1vcnUyenl5Mw==">→ contact me</a></strong></h4>
+          <h4><strong><a href="https://www.instagram.com/knatchaya_/profilecard/?igsh=MTNtMm1vcnUyenl5Mw==">→ email me</a></strong></h4>
         </div>
       </div>
 
